# MyPong

./: CMakeLists.txt
inc/: algorithm.hpp  paddle.h
src/: algorithm.cpp  circle.cpp  main.cpp  paddle.cpp
